<resources>
    <string name="app_name">Gasto da Viagem</string>
    <string name="distance">Digite a distância em km</string>
    <string name="totaldistance">Total de quilômetros</string>
    <string name="price">Digite o valor do combustível</string>
    <string name="priceperliter">Preço por litro</string>
    <string name="autonomy">Informe a autonomia do seu veículo</string>
    <string name="kmperliter">Km por Litro</string>
    <string name="couststring">Seu gasto total será de:</string>
    <string name="totalvalue">R$ 0</string>
    <string name="calculate">CALCULAR</string>
    <string name="validation_fill_all_fields">Por favor, preencha todos os campos.</string>

</resources>